<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:background="@drawable/corner_radius">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/photo_of_cat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:tint="@color/gray3"
            android:src="@drawable/baseline_star_outline_24"
            android:contentDescription="@string/add_to_favourites" />

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:tint="@color/gray3"
            android:src="@drawable/baseline_thumb_up_24"
            android:contentDescription="@string/like" />

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:tint="@color/gray3"
            android:src="@drawable/baseline_thumb_down_24"
            android:contentDescription="@string/dislike" />

        <ImageButton
            android:backgroundTint="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            app:tint="@color/gray3"
            android:src="@drawable/baseline_more_vert_24"
            android:contentDescription="@string/more" />
    </LinearLayout>
</LinearLayout>